fixed footer on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -104,9 +104,7 @@ body {
 @media (max-width: 992px) {
     #footer {
         margin-left: -20px;
-        margin-right: -20px;
         padding-left: 20px;
-        padding-right: 20px;
     }
 
     #wrap {
